# Django-cinema

./: .env.example  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
config/: exception_handlers.py  settings.py  urls.py
db/: neo4j.py
genres/: urls.py
genres/dto/: __init__.py  dto.py
genres/forms/: __init__.py  genre_form.py
genres/repo/: repo.py
genres/services/: services.py
genres/static/: style.css
genres/templates/: detail.html  genre_confirm_delete.html  genre_form.html  list.html
genres/templates/includes/: _auth_corner.html
genres/utils/: responses.py
genres/views/: __init__.py  pages.py  views.py
movies/: urls.py
movies/dto/: __init__.py  movie.py
movies/repositories/: repo.py
movies/services/: services.py
movies/views/: __init__.py  views.py
registration/templates/registration/: login.html
utils/: helper.py  neo4j.py
