[project]
name = "cinema"
version = "0.1.0"
description = "Django + Neo4j graph API for movies, genres, and related entities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.1",
    "gunicorn>=25.3.0",
    "neo4j>=6.1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]
